--- a/services.html
+++ b/services.html
@@ -251,7 +251,7 @@
           </div>
         </div>
         
-        <div class="price">£160 for three 2-hour sessions</div>
+        <div class="price">£80 per session</div>
         
         <p class="text-center">
           <a href="contact.html" class="btn">Book Birth Preparation Sessions</a>
