Update Pages “services”

--- a/services.html
+++ b/services.html
@@ -1,9 +1,9 @@
 ---
 layout: full
-title: "Doula Services & Pricing | Birth Support Packages | DoulaCare Sussex"
-seo_title: "Doula Services & Pricing | Birth Support Packages | DoulaCare Sussex"
-description: "Professional doula services including birth packages, birth pool hire, birth preparation sessions, and postnatal support. Serving Sussex & Surrey. Free consultation available."
-keywords: "doula services, birth package, doula pricing, birth preparation, postnatal support, birth pool hire, doula sussex pricing"
+title: Doula Services & Pricing | Birth Support Packages | DoulaCare Sussex
+description: Professional doula services including birth packages, birth pool hire, birth preparation sessions, and postnatal support. Serving Sussex & Surrey. Free consultation available.
+keywords: doula services, birth package, doula pricing, birth preparation, postnatal support, birth pool hire, doula sussex pricing
+seo_title: Doula Services & Pricing | Birth Support Packages | DoulaCare Sussex
 ---
 
 <!-- Schema.org for Services -->
@@ -189,7 +189,7 @@ keywords: "doula services, birth package, doula pricing, birth preparation, post
           </div>
         </div>
 
-        <div class="price">£160 for three 2-hour sessions</div>
+        <div class="price">£200 for three 2-hour sessions</div>
 
         <p class="text-center">
           <a href="{{ '/contact.html' | relative_url }}" class="btn">Book Birth Preparation Sessions</a>
