Update Pages “home”

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 ---
 layout: home
-title: "DoulaCare | Birth Doula Services in Sussex & Surrey | Laureen Eaton"
-seo_title: "DoulaCare | Birth Doula Services in Sussex & Surrey | Laureen Eaton"
-description: "Professional birth doula services in West Sussex, East Sussex & Surrey. Over 10 years experience supporting families through pregnancy, birth & postnatal care. Free consultation available."
-keywords: "doula sussex, birth doula, pregnancy support, doula west sussex, doula east sussex, doula surrey, doula crawley, doula horsham, postnatal support, birth support, VBAC support, home birth doula"
-og_image: "/images/home_image.jpg"
+title: DoulaCare | Birth Doula Services in Sussex & Surrey | Laureen Eaton
+description: Professional birth doula services in West Sussex, East Sussex & Surrey. Over 10 years experience supporting families through pregnancy, birth & postnatal care. Free consultation available.
+keywords: doula sussex, birth doula, pregnancy support, doula west sussex, doula east sussex, doula surrey, doula crawley, doula horsham, postnatal support, birth support, VBAC support, home birth doula
+seo_title: DoulaCare | Birth Doula Services in Sussex & Surrey | Laureen Eaton
+og_image: /images/home_image.jpg
 ---
 
 <!-- Schema.org Structured Data -->
@@ -65,7 +65,7 @@ og_image: "/images/home_image.jpg"
 
       <h2>Welcome to DoulaCare</h2>
 
-      <p>I'm <strong>Laureen Eaton</strong>, a certified birth doula based in Crawley, West Sussex, serving families across East Sussex and Surrey. With over 10 years of professional experience and more than 50 births supported, I'm passionate about empowering women and their partners to feel confident throughout their birth experience.</p>
+      <p>I'm <strong>called Laureen Eaton</strong>, a certified birth doula based in Crawley, West Sussex, serving families across East Sussex and Surrey. With over 10 years of professional experience and more than 50 births supported, I'm passionate about empowering women and their partners to feel confident throughout their birth experience.</p>
 
       <p>As your doula, I provide comprehensive support that goes beyond medical care. I offer practical, physical, emotional, and spiritual guidance to you and your family before, during, and after the birth of your baby. My role is to ensure you feel safe, supported, and informed every step of the way.</p>
 
