Update Pages “about”

--- a/about.html
+++ b/about.html
@@ -1,10 +1,10 @@
 ---
 layout: page
-title: "About Laureen Eaton | Experienced Birth Doula | DoulaCare Sussex"
-seo_title: "About Laureen Eaton | Experienced Birth Doula | DoulaCare Sussex"
-description: "Meet Laureen Eaton, certified birth doula with over 10 years experience. Mother of five, grandmother, and passionate supporter of natural birth in Sussex & Surrey."
-keywords: "laureen eaton, birth doula sussex, experienced doula, certified doula, nurturing birth, doula uk member"
-og_image: "/images/laureen.jpg"
+title: About Laureen Eaton | Experienced Birth Doula | DoulaCare Sussex
+seo_title: About Laureen Eaton | Experienced Birth Doula | DoulaCare Sussex
+description: Meet Laureen Eaton, certified birth doula with over 10 years experience. Mother of five, grandmother, and passionate supporter of natural birth in Sussex & Surrey.
+keywords: laureen eaton, birth doula sussex, experienced doula, certified doula, nurturing birth, doula uk member
+og_image: /images/laureen.jpg
 ---
 
 <script type="application/ld+json">
@@ -47,11 +47,11 @@ og_image: "/images/laureen.jpg"
 
 <h2>My Philosophy</h2>
 
-<p>I believe deeply in the innate ability of women to birth their babies. While medical interventions certainly have their place, I've witnessed that most women, when provided with loving support and compassionate care, can give birth without unnecessary intervention. Birth is not a medical emergency—it's a natural, transformative life event.</p>
+<p>I believe deeply in the innate ability of women to birth their babies. While medical interventions certainly have their place, I've witnessed that most women, when provided with loving support and compassionate care, can give birth without unnecessary intervention. Birth is not a medical emergency, it's a natural, transformative life event.</p>
 
 <h2>My Journey to Becoming a Doula</h2>
 
-<p>My journey into doula work began with a profound moment. After having the privilege of attending the birth of one of my grandchildren, the midwife observed that I would make an ideal birth partner. This comment sparked something within me—a realization that I could use my life experience to help other women achieve positive, empowering birth experiences.</p>
+<p>My journey into doula work began with a profound moment. After having the privilege of attending the birth of one of my grandchildren, the midwife observed that I would make an ideal birth partner. This comment sparked something within me - a realization that I could use my life experience to help other women achieve positive, empowering birth experiences.</p>
 
 <p>I wanted other mothers to look back on their births with joy and fulfillment, rather than trauma or regret. This desire led me to train as both a birth and postnatal doula in 2007, and I haven't looked back since.</p>
 
