Update Pages “services”

--- a/services.html
+++ b/services.html
@@ -217,7 +217,7 @@ seo_title: Doula Services & Pricing | Birth Support Packages | DoulaCare Sussex
 
         <p><strong>Format:</strong> Sessions can be conducted in-person or remotely via Zoom, whichever feels most comfortable for you.</p>
 
-        <div class="price">£175 for 3 sessions</div>
+        <div class="price">£200 for three sessions</div>
 
         <p><strong>Special offer:</strong> £50 if purchased alongside the Birth Package (discounted rate of £125)</p>
 
